--- a/_data/fisch-in-tomatensauce.yml
+++ b/_data/fisch-in-tomatensauce.yml
@@ -80,7 +80,7 @@ Zutaten:
  - s: 2 TL Tomatenmark
  - s: 70ml Öl
 
-Vorbereitung:
+Vorbereitung-Fisch:
  - s: Den Fisch waschen, trocken tupfen, in mundgerechte Stücke schneiden und in eine Schüssel geben
  - s: 1 TL Maisstärke in eine Schüssel geben
  - s: 2 Prisen Salz in die Schüssel mit der Maisstärke,... geben
@@ -88,6 +88,8 @@ Vorbereitung:
  - s: 1 EL Reiswein in die Schüssel mit der Maisstärke,... geben
  - s: Die Schüssel mit der Maisstärke ordentlich umrühren bis die komplette Maisstärke aufgelöst ist
  - s: Den Inhalt der Schüssel mit der Maisstärke,... in die Schüssel mit dem Fisch unterrühren
+
+Vorbereitung-Gemüse:
  - s: 2 Paprikaschoten waschen, putzen, in kleine Stücke schneiden und in eine Schüssel geben
  - s: 10g Lauch/Alternativ 2 Frühlingszwiebeln klein hacken und in die Schüssel mit den Paprikaschoten geben
  - s: 3EL+1TL (20g) Ingwer in die Schüssel mit den Paprikaschoten,... geben
@@ -96,6 +98,8 @@ Vorbereitung:
  - s: 1 EL Zucker in die Schüssel mit dem Reiswein geben
  - s: 1/4 TL Salz in die Schüssel mit dem Reiswein,... geben
  - s: 1/2 TL Maisstärke in die Schüssel mit dem Reiswein,... geben
+
+Vorbereitung-Sauce:
  - s: 2 EL Reiswein in eine Schüssel geben
  - s: 1 TL Reisessig (alternativ 1/2 TL Essig,1/2 TL Wasser) in die Schüssel mit dem Reiswein,... geben
  - s: 1/4 TL Sojasauce in die Schüssel mit dem Reiswein,... geben
