--- a/_data/garlic-butter-chicken.yml
+++ b/_data/garlic-butter-chicken.yml
@@ -26,12 +26,14 @@ Zutaten:
 
 Vorbereitung:
 - s: In einer kleinen Schüssel Paprika, Knoblauchpulver, Zwiebelpulver, Oregano, Thymian und Salz vermischen.
-- s: Etwas von der Gewürzmischung auf eine Seite des Hähnchens streuen.
+- s: Etwas von der Gewürzmischung auf eine Seite der Hühnerschnitzel streuen.
 
 
 Zubereitung:
 - s: In einer großen Pfanne das Öl bei mittlerer Hitze erhitzen.
-- s: Das Hähnchen in der Pfanne mit der gewürzten Seite nach unten anrichten.
-- s: Die andere Seite des Hähnchens mit der Gewürzmischung würzen und braten, bis sie goldbraun ist, etwa 3-4 Minuten.
-- s: Sobald es goldbraun ist, die Butter in die Pfanne geben und schmelzen lassen. Den Knoblauch hinzufügen und etwa 30 Sekunden anbraten, bis er duftet.
-- s: Die Hühnerbrühe hinzufügen, um die Pfanne zu deglacieren. Die Mischung über die Hähnchenschenkel löffeln und weiter kochen, bis die Brühe reduziert ist und das Hähnchen eine interne Temperatur von 165ºC erreicht hat, etwa 1-2 Minuten.
+- s: Die Hühnerschnitzel in der Pfanne mit der gewürzten Seite nach unten anrichten.
+- s: Die andere Seite der Hühnerschnitzel mit der Gewürzmischung würzen und braten, bis diese goldbraun sind, etwa 4-5 Minuten.
+- s: Die Hühnerschnitzel wenden und weitere 3-4 Minuten braten.
+- s: Sobald diese goldbraun sind, die Butter in die Pfanne geben und schmelzen lassen.
+- s: Den Knoblauch hinzufügen und etwa 30 Sekunden anbraten, bis er duftet.
+- s: Die Hühnerbrühe hinzufügen, um die Pfanne zu deglacieren. Die Sauce über die Hähnchenschenkelschnitzel gießen und weiter kochen, bis die Brühe reduziert ist und das Hähnchen eine interne Temperatur von 165ºC erreicht hat, etwa 1-2 Minuten.
