--- a/_data/garlic-butter-chicken.yml
+++ b/_data/garlic-butter-chicken.yml
@@ -20,20 +20,23 @@ Zutaten:
 - s: 1 EL Öl
 - s: 8 entbeinte und enthäutete Hähnchenschenkel
 - s: 1 EL Butter
-- s: 2 Knoblauchzehen, gehackt
+- s: 2 Knoblauchzehen
 - s: 1/3 Tasse Hühnerbrühe
 
 
 Vorbereitung:
-- s: In einer kleinen Schüssel Paprika, Knoblauchpulver, Zwiebelpulver, Oregano, Thymian und Salz vermischen.
+- s: In einer kleinen Schüssel 2 TL Paprika, 1 TL Knoblauchpulver, 1 TL Zwiebelpulver, 1/2 TL Oregano, 1/2 L Thymian und 1/2 TL Salz vermischen.
+- s: 2 Knoblauchzehen klein hacken und in eine kleine Schüssel geben.
+- s: 1/3 Tasse Hühnerbrühe in ein Gefäß geben.
+- s: 1 EL Butter in eine kleine Schüssel geben.
 - s: Etwas von der Gewürzmischung auf eine Seite der Hühnerschnitzel streuen.
 
 
 Zubereitung:
-- s: In einer großen Pfanne das Öl bei mittlerer Hitze erhitzen.
+- s: In einer großen Pfanne 1 EL Öl bei mittlerer Hitze erhitzen.
 - s: Die Hühnerschnitzel in der Pfanne mit der gewürzten Seite nach unten anrichten.
 - s: Die andere Seite der Hühnerschnitzel mit der Gewürzmischung würzen und braten, bis diese goldbraun sind, etwa 4-5 Minuten.
 - s: Die Hühnerschnitzel wenden und weitere 3-4 Minuten braten.
-- s: Sobald diese goldbraun sind, die Butter in die Pfanne geben und schmelzen lassen.
-- s: Den Knoblauch hinzufügen und etwa 30 Sekunden anbraten, bis er duftet.
-- s: Die Hühnerbrühe hinzufügen, um die Pfanne zu deglacieren. Die Sauce über die Hähnchenschenkelschnitzel gießen und weiter kochen, bis die Brühe reduziert ist und das Hähnchen eine interne Temperatur von 165ºC erreicht hat, etwa 1-2 Minuten.
+- s: Sobald diese goldbraun sind, den Inhalt der Schüssel mit der Butter in die Pfanne geben und diese schmelzen lassen.
+- s: Den Inhalt der Schüssel mit dem Knoblauch hinzufügen und etwa 30 Sekunden anbraten, bis er duftet.
+- s: Den Inhalt des  Gefäßes mit der Hühnerbrühe hinzufügen, um die Pfanne zu deglacieren. Die Sauce über die Hähnchenschenkelschnitzel gießen und weiter kochen, bis die Brühe reduziert ist und das Hähnchen eine interne Temperatur von 165ºC erreicht hat, etwa 1-2 Minuten.
