--- a/_data/garlic-butter-chicken.yml
+++ b/_data/garlic-butter-chicken.yml
@@ -19,7 +19,7 @@ Zutaten:
 - s: 1/2 TL Salz
 - s: 1 EL Öl
 - s: 8 entbeinte und enthäutete Hähnchenschenkel
-- s: 1 EL Butter
+- s: 1 EL (15g) Butter
 - s: 2 Knoblauchzehen
 - s: 1/3 Tasse Hühnerbrühe
 
@@ -28,7 +28,7 @@ Vorbereitung:
 - s: In einer kleinen Schüssel 2 TL Paprika, 1 TL Knoblauchpulver, 1 TL Zwiebelpulver, 1/2 TL Oregano, 1/2 L Thymian und 1/2 TL Salz vermischen.
 - s: 2 Knoblauchzehen klein hacken und in eine kleine Schüssel geben.
 - s: 1/3 Tasse Hühnerbrühe in ein Gefäß geben.
-- s: 1 EL Butter in eine kleine Schüssel geben.
+- s: 1 EL (15g) Butter in eine kleine Schüssel geben.
 - s: Etwas von der Gewürzmischung auf eine Seite der Hühnerschnitzel streuen.
 
 
