--- a/_data/parmesan-knoblauch-huehnerschnitzel.yml
+++ b/_data/parmesan-knoblauch-huehnerschnitzel.yml
@@ -14,25 +14,36 @@ Zutaten:
 - s: 1 EL Öl
 - s: 4 Hähnchenschnitzel
 - s: 120 g Weizenmehl
-- s: 2 EL Butter
+- s: 2 EL/30 g Butter
 - s: 2 Knoblauchzehen, gehackt
 - s: 1 EL Weizenmehl
 - s: 120 ml Hühnerbrühe
-- s: 120 ml Sahne
+- s: 120 ml Schlagobers
 - s: 25 g frisch geriebener Parmesan
 - s: 4 Tassen gehackter Baby-Spinat
 - s: Salz und Pfeffer nach Geschmack
 
+Vorbereitung:
+- s: Mehl in einene Teller geben
+- s: 2 EL / 30g Butter in eine Schüssel geben
+- s: 2 Knoblauchzehen klein hacken und in eine Schüssel geben
+- s: 120ml Wasser in ein Gefäß geben
+- s: 25g Parmesan reiben und in eine Schüssel geben
+- s: 1 EL Mehl in eine kleine Schüssel geben
+- s: 120 ml/g Schlagobers in ein Gefäß geben
+
 Zubereitung:
 - s: Eine große Pfanne bei mittlerer bis hoher Hitze erhitzen und das Öl hinzufügen.
-- s: Die Hähnchenschnitzel beidseitig leicht mit Mehl bestäuben und in die Pfanne geben.
+- s: Die Hähnchenschnitzel beidseitig leicht mit Mehl bestäuben (Durch den Telleer mit dem Mehl ziehen) und in die Pfanne geben.
 - s: Etwa 3-4 Minuten anbraten, bis sie goldbraun sind und sich leicht von der Pfanne lösen lassen.
 - s: Die Hühnerschnitzel wenden und die andere Seite weitere 2-3 Minuten braten, bis diese ebenfalls goldbraun sind und eine Innentemperatur von 165ºC erreicht haben.
 - s: Mit Salz und Pfeffer würzen und beiseite stellen.
-- s: Die Hitze auf mittlere Stufe reduzieren und die Butter und den Knoblauch in die Pfanne geben.
+- s: Die Hitze auf mittlere Stufe reduzieren und den Inhalt der Schüssel mit der Butter in die Pfanne geben und schmelzen lassen.
+- s: Den Inhalt der Schüssel mit dem Knoblauch in die Pfanne geben.
 - s: Etwa 30 Sekunden unter Rühren braten, bis der Knoblauch duftet.
 - s: Das Mehl hinzufügen und weitere 30 Sekunden unter Rühren braten.
-- s: Die Hühnerbrühe und Sahne hinzufügen und vom Pfannenboden den Bratenansatz abkratzen.
+- s: Die Inhalt des Gefäßes mit der Hühnerbrühe in die Pfanne geben
+- s: Den Inhalt des Gefäß mit der Sahne hinzufügen und vom Pfannenboden den Bratenansatz ablösen.
 - s: Den Parmesan einrühren und ca. 1 Minute lang kochen lassen, bis er vollständig geschmolzen ist.
 - s: Den Spinat hinzufügen und etwa 1 Minute lang kochen lassen, bis er welk ist.
 - s: Die Hähnchenschnitzel zurück in die Pfanne geben und mit der Sauce übergießen
