--- a/_data/red-thai-curry.yml
+++ b/_data/red-thai-curry.yml
@@ -81,7 +81,7 @@ Zutaten:
  - s: 2-3 EL rote Currypaste (50g-75g)
  - s: 2 Dosen Kokosmilch (je 400ml/g) - Alternativ 205ml/95g Kokosmilchpulver+800ml Wasser
  - s: 1 EL Limettensaft
- - s: 1-2 EL Zucker (Alternaiv Birkenzucker)
+ - s: 3 EL Zucker (Alternativ Birkenzucker)
 
 Vorbereitung:
  - s: Hühnerfleisch klein schneiden und in eine Schüssel geben
@@ -98,4 +98,4 @@ Zubereitung:
  - s: Den Inhalt der Schüssel mit den Hühnerfleisch dazu geben und ca. 5 Minuten köcheln lassen
  - s: Den Inhalt der Schüssel mit den Paprikastreifen,.. dazu geben und so lange köcheln lassen bis das Gemüse die gewünschte Bissfestigkeit erreicht hat (5-15 Minuten).
  - s: 1 EL Limettensaft dazu geben
- - s: Mit Zucker (Alternativ Birkenzucker) abschmeckn (1-2 EL)
+ - s: Mit Zucker (Alternativ Birkenzucker) abschmecken (3 EL)
